ipc/ipdl/test/ipdl/error/shmem.ipdl
using mozilla::ipc::Shmem;      // redeclaration

protocol shmem {
child: Msg(Shmem s);
};
